--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,11 @@ authors = ["Adam Reichold <adam.reichold@t-online.de>"]
 edition = "2018"
 
 [dependencies]
-failure = "0.1"
-log = "0.4"
-simplelog = "0.7"
 chrono = "0.4"
 tempfile = "3.0"
-serde = "1.0"
-serde_derive = "1.0"
+serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
-serde-xml-rs = "0.3"
+serde-xml-rs = { version = "0.3", default-features = false }
 
 [profile.release]
 opt-level = "s"
