--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ resolver = "2"
 
 [dependencies]
 chrono = { version = "0.4", default-features = false, features = ["clock"] }
+clap = { version = "3.1", default-features = false, features = ["std", "cargo"] }
 tempfile = "3.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_yaml = "0.8"
